--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/worashf/taskify-backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.7.2",
     "nanoid": "^4.0.0"
   },
